# PyGenSVM

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CHANGELOG.rst  MANIFEST.in  Makefile  README.md  README.rst  make_release.py  pyproject.toml  setup.py
.github/workflows/: build.yml  deploy.yml
build_tools/github/: build_minimal_windows_image.sh  inspect_pyd.ps1  repair_windows_wheels.sh  setup_windows.ps1  vendor.py
docs/: CHANGELOG.rst  Makefile  README.rst  auto_functions.rst  auto_functions.txt  cls_gensvm.rst  cls_gridsearch.rst  conf.py  generate_autodocs.py  index.rst  kernels.rst  make.bat
gensvm/: __init__.py  core.py  gridsearch.py  models.py  pyx_gensvm.pyx  sklearn_util.py  util.py
gensvm/cython_wrapper/: wrapper.pxd  wrapper.pyx
src/: wrapper.pxd  wrapper.pyx
test/: test_core.py  test_gridsearch.py  test_util.py
test_human/: interrupt_test.py
