[tool.poetry]
name = "gensvm"
version = "0.2.4"
description = "Python package for the GenSVM classifier"
authors = ["Gertjan van den Burg <gertjanvandenburg@gmail.com>"]
license = "GPL-2.0+"

[tool.poetry.dependencies]
python = "^3.7"
scikit-learn = "^0.21.2"
numpy = "^1.16"

[tool.poetry.dev-dependencies]
Sphinx = "=1.6.5"
sphinx_rtd_theme = "^0.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
